--- a/MultimodalFashionChat_V3_4.ipynb
+++ b/MultimodalFashionChat_V3_4.ipynb
@@ -163,7 +163,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 629,
+          "height": 609,
           "referenced_widgets": [
             "67bdda161ccd45bfba416837c5ea1f27",
             "4039faa9daf54ee3b35254846e81fefe",
@@ -2793,70 +2793,127 @@
         "\n",
         "    return results, enhanced_query\n",
         "\n",
-        "def search_products(query_emb, query_text=\"\", k=5):\n",
-        "    scores, ids = faiss_index.search(query_emb, k * 3)\n",
-        "    keywords = set(re.findall(r\"(jacket|coat|dress|shirt|pants|shorts|skirt|shoe|bag|hat|sweater|top|vest|scarf)\", query_text.lower()))\n",
-        "    results = []\n",
-        "    for s, i in zip(scores[0], ids[0]):\n",
-        "        if 0 <= i < len(products):\n",
-        "            p = products[i].copy()\n",
-        "            p[\"similarity\"] = max(0, min(100, float(s) * 100))\n",
-        "            if keywords and p[\"category\"].lower() in keywords:\n",
-        "                p[\"similarity\"] = min(100, p[\"similarity\"] + 25)\n",
-        "            results.append(p)\n",
-        "    results.sort(key=lambda x: -x[\"similarity\"])\n",
-        "    return results[:k]\n",
-        "\n",
         "def generate_response(query, prods):\n",
         "    ctx = \", \".join([p[\"name\"] + \" \" + str(int(p[\"similarity\"])) + \"%\" for p in prods[:3]])\n",
         "    prompt = \"<|begin_of_text|><|start_header_id|>system<|end_header_id|>Brief fashion advice.<|eot_id|><|start_header_id|>user<|end_header_id|>\" + query + \" Products:\" + ctx + \"<|eot_id|><|start_header_id|>assistant<|end_header_id|>\"\n",
         "    out = llm.generate(**llm_tok(prompt, return_tensors=\"pt\").to(DEVICE), max_new_tokens=100)\n",
         "    return llm_tok.decode(out[0], skip_special_tokens=True).split(\"assistant\")[-1].strip()\n",
         "\n",
+        "def perform_search(text_query, image_query, voice_query):\n",
+        "    embeddings = []\n",
+        "    query_description = []\n",
+        "\n",
+        "    if voice_query:\n",
+        "        text_query = voice_query + (\" \" + text_query if text_query else \"\")\n",
+        "        query_description.append(\"🎤 Voice\")\n",
+        "\n",
+        "    if text_query:\n",
+        "        txt_emb = encode_text(text_query)\n",
+        "        embeddings.append(txt_emb)\n",
+        "        query_description.append(\"📝 Text\")\n",
+        "\n",
+        "    if image_query:\n",
+        "        img_emb = encode_image(image_query)\n",
+        "        embeddings.append(img_emb)\n",
+        "        query_description.append(\"🖼️ Image\")\n",
+        "\n",
+        "    if not embeddings:\n",
+        "        return None, None, None\n",
+        "\n",
+        "    if len(embeddings) == 1:\n",
+        "        query_emb = embeddings[0]\n",
+        "    else:\n",
+        "        query_emb = sum(embeddings) / len(embeddings)\n",
+        "        query_emb = query_emb / np.linalg.norm(query_emb)\n",
+        "\n",
+        "    final_text = text_query if text_query else \"similar fashion items\"\n",
+        "    query_desc_str = \" + \".join(query_description)\n",
+        "\n",
+        "    return query_emb, final_text, query_desc_str\n",
+        "\n",
         "if \"messages\" not in st.session_state:\n",
         "    st.session_state.messages = []\n",
-        "if \"search_image\" not in st.session_state:\n",
-        "    st.session_state.search_image = None\n",
-        "if \"voice_text\" not in st.session_state:\n",
-        "    st.session_state.voice_text = None\n",
-        "if \"audio_processed\" not in st.session_state:\n",
-        "    st.session_state.audio_processed = False\n",
+        "if \"current_image\" not in st.session_state:\n",
+        "    st.session_state.current_image = None\n",
+        "if \"current_voice\" not in st.session_state:\n",
+        "    st.session_state.current_voice = None\n",
+        "if \"current_text\" not in st.session_state:\n",
+        "    st.session_state.current_text = \"\"\n",
+        "if \"file_uploader_key\" not in st.session_state:\n",
+        "    st.session_state.file_uploader_key = 0\n",
         "\n",
-        "st.title(\"Fashion Assistant\")\n",
+        "st.title(\"🛍️ Fashion Assistant\")\n",
         "st.caption(str(len(products)) + \" products loaded\")\n",
         "\n",
         "with st.sidebar:\n",
-        "    st.header(\"Input Options\")\n",
-        "    st.subheader(\"Image Search\")\n",
-        "    uploaded_image = st.file_uploader(\"Upload fashion image\", type=[\"jpg\",\"jpeg\",\"png\"], key=\"img\")\n",
+        "    st.header(\"Search Inputs\")\n",
+        "    st.markdown(\"**Use any combination of:**\")\n",
+        "\n",
+        "    st.subheader(\"1️⃣ Text Query\")\n",
+        "    text_input = st.text_area(\n",
+        "        \"Describe what you're looking for\",\n",
+        "        value=st.session_state.current_text,\n",
+        "        placeholder=\"e.g., casual summer dress, blue jacket...\",\n",
+        "        height=80,\n",
+        "        key=\"text_area_\" + str(st.session_state.file_uploader_key)\n",
+        "    )\n",
+        "\n",
+        "    st.subheader(\"2️⃣ Image Search\")\n",
+        "    uploaded_image = st.file_uploader(\n",
+        "        \"Upload a fashion image\",\n",
+        "        type=[\"jpg\",\"jpeg\",\"png\"],\n",
+        "        key=\"img_\" + str(st.session_state.file_uploader_key)\n",
+        "    )\n",
         "    if uploaded_image:\n",
         "        img = Image.open(uploaded_image).convert(\"RGB\")\n",
-        "        st.session_state.search_image = img\n",
-        "        st.image(img, caption=\"Image will be combined with your text query\", use_container_width=True)\n",
-        "        st.info(\"💡 Type what you are looking for in the text box and the image will be included automatically!\")\n",
+        "        st.session_state.current_image = img\n",
+        "        st.image(img, caption=\"Uploaded image\", use_container_width=True)\n",
+        "    elif st.session_state.current_image:\n",
+        "        st.image(st.session_state.current_image, caption=\"Current image\", use_container_width=True)\n",
         "\n",
-        "    st.subheader(\"Voice Input\")\n",
-        "    uploaded_audio = st.file_uploader(\"Upload voice\", type=[\"wav\",\"mp3\",\"m4a\"], key=\"audio\")\n",
-        "    if uploaded_audio and not st.session_state.audio_processed:\n",
+        "    st.subheader(\"3️⃣ Voice Input\")\n",
+        "    uploaded_audio = st.file_uploader(\n",
+        "        \"Upload voice recording\",\n",
+        "        type=[\"wav\",\"mp3\",\"m4a\"],\n",
+        "        key=\"audio_\" + str(st.session_state.file_uploader_key)\n",
+        "    )\n",
+        "    if uploaded_audio:\n",
         "        st.audio(uploaded_audio)\n",
-        "        with st.spinner(\"Transcribing automatically...\"):\n",
-        "            text = transcribe_audio(uploaded_audio.read())\n",
-        "            st.session_state.voice_text = text\n",
-        "            st.session_state.audio_processed = True\n",
-        "        st.success(\"✅ Transcribed: \" + text)\n",
-        "        st.info(\"💡 Press Enter or type additional details to search!\")\n",
+        "        if st.button(\"🎙️ Transcribe Audio\", type=\"secondary\"):\n",
+        "            with st.spinner(\"Transcribing...\"):\n",
+        "                transcribed = transcribe_audio(uploaded_audio.read())\n",
+        "                st.session_state.current_voice = transcribed\n",
+        "                st.success(\"✅ Transcribed: \" + transcribed)\n",
         "\n",
-        "    if st.button(\"Clear All\"):\n",
+        "    if st.session_state.current_voice:\n",
+        "        st.info(\"🎤 Voice text: \" + st.session_state.current_voice)\n",
+        "\n",
+        "    st.divider()\n",
+        "\n",
+        "    col1, col2 = st.columns(2)\n",
+        "    with col1:\n",
+        "        search_button = st.button(\"🔍 Search\", type=\"primary\", use_container_width=True)\n",
+        "    with col2:\n",
+        "        clear_button = st.button(\"🗑️ Clear\", type=\"secondary\", use_container_width=True)\n",
+        "\n",
+        "    if clear_button:\n",
+        "        st.session_state.current_image = None\n",
+        "        st.session_state.current_voice = None\n",
+        "        st.session_state.current_text = \"\"\n",
+        "        st.session_state.file_uploader_key += 1\n",
+        "        st.rerun()\n",
+        "\n",
+        "    st.divider()\n",
+        "    if st.button(\"Clear Chat History\"):\n",
         "        st.session_state.messages = []\n",
-        "        st.session_state.search_image = None\n",
-        "        st.session_state.voice_text = None\n",
-        "        st.session_state.audio_processed = False\n",
         "        st.rerun()\n",
         "\n",
         "for msg in st.session_state.messages:\n",
         "    with st.chat_message(msg[\"role\"]):\n",
         "        st.write(msg[\"text\"])\n",
-        "        if msg.get(\"products\"):\n",
+        "        if msg.get(\"query_type\"):\n",
+        "            st.caption(\"Search type: \" + msg[\"query_type\"])\n",
+        "        if msg.get(\"products\") and len(msg[\"products\"]) > 0:\n",
         "            cols = st.columns(min(5, len(msg[\"products\"])))\n",
         "            for i, p in enumerate(msg[\"products\"][:5]):\n",
         "                with cols[i]:\n",
@@ -2864,81 +2921,144 @@
         "                        st.image(p[\"image\"], use_container_width=True)\n",
         "                    st.caption(p[\"name\"])\n",
         "                    st.progress(int(min(100, p[\"similarity\"])))\n",
+        "        elif msg.get(\"products\") is not None and len(msg[\"products\"]) == 0:\n",
+        "            st.warning(\"No matching products found.\")\n",
         "\n",
-        "if st.session_state.voice_text:\n",
-        "    st.info(\"🎤 Voice: \" + st.session_state.voice_text)\n",
+        "if search_button:\n",
+        "    text_q = text_input.strip()\n",
+        "    img_q = st.session_state.current_image\n",
+        "    voice_q = st.session_state.current_voice\n",
         "\n",
-        "if prompt := st.chat_input(\"What are you looking for?\"):\n",
-        "    if st.session_state.voice_text:\n",
-        "        prompt = st.session_state.voice_text + \" \" + prompt if prompt else st.session_state.voice_text\n",
-        "        st.session_state.voice_text = None\n",
-        "        st.session_state.audio_processed = False\n",
+        "    if not text_q and not img_q and not voice_q:\n",
+        "        st.warning(\"⚠️ Please provide at least one input (text, image, or voice) to search!\")\n",
+        "    else:\n",
+        "        query_emb, final_text, query_desc = perform_search(text_q, img_q, voice_q)\n",
         "\n",
-        "    st.session_state.messages.append({\"role\": \"user\", \"text\": prompt})\n",
+        "        if query_emb is not None:\n",
+        "            user_message = final_text\n",
+        "            if img_q:\n",
+        "                user_message = user_message + \" [with image]\"\n",
+        "\n",
+        "            st.session_state.messages.append({\n",
+        "                \"role\": \"user\",\n",
+        "                \"text\": user_message,\n",
+        "                \"query_type\": query_desc\n",
+        "            })\n",
+        "\n",
+        "            with st.chat_message(\"user\"):\n",
+        "                st.write(user_message)\n",
+        "                st.caption(\"Search type: \" + query_desc)\n",
+        "\n",
+        "            with st.spinner(\"Searching...\"):\n",
+        "                context = build_context(st.session_state.messages)\n",
+        "                results, enhanced_query = search_with_context(final_text, query_emb, context, k=5)\n",
+        "                response = generate_response(enhanced_query, results)\n",
+        "\n",
+        "            with st.chat_message(\"assistant\"):\n",
+        "                st.write(response)\n",
+        "                if len(results) > 0:\n",
+        "                    cols = st.columns(min(5, len(results)))\n",
+        "                    for i, p in enumerate(results[:5]):\n",
+        "                        with cols[i]:\n",
+        "                            if p.get(\"image\"):\n",
+        "                                st.image(p[\"image\"], use_container_width=True)\n",
+        "                            st.caption(p[\"name\"] + \" \" + str(int(p[\"similarity\"])) + \"%\")\n",
+        "                            st.progress(int(min(100, p[\"similarity\"])))\n",
+        "                else:\n",
+        "                    st.warning(\"No matching products found for your search.\")\n",
+        "\n",
+        "            st.session_state.messages.append({\n",
+        "                \"role\": \"assistant\",\n",
+        "                \"text\": response,\n",
+        "                \"products\": results\n",
+        "            })\n",
+        "\n",
+        "            st.session_state.current_image = None\n",
+        "            st.session_state.current_voice = None\n",
+        "            st.session_state.current_text = \"\"\n",
+        "            st.session_state.file_uploader_key += 1\n",
+        "            st.rerun()\n",
+        "\n",
+        "prompt = st.chat_input(\"💬 Quick text search (or use sidebar for multi-modal search)\")\n",
+        "if prompt:\n",
+        "    st.session_state.messages.append({\n",
+        "        \"role\": \"user\",\n",
+        "        \"text\": prompt,\n",
+        "        \"query_type\": \"📝 Text (quick)\"\n",
+        "    })\n",
+        "\n",
         "    with st.chat_message(\"user\"):\n",
         "        st.write(prompt)\n",
         "\n",
         "    with st.spinner(\"Searching...\"):\n",
-        "        if st.session_state.search_image:\n",
-        "            img_emb = encode_image(st.session_state.search_image)\n",
-        "            txt_emb = encode_text(prompt)\n",
-        "            query_emb = (img_emb + txt_emb) / 2\n",
-        "            query_emb = query_emb / np.linalg.norm(query_emb)\n",
-        "        else:\n",
-        "            query_emb = encode_text(prompt)\n",
-        "\n",
+        "        query_emb = encode_text(prompt)\n",
         "        context = build_context(st.session_state.messages)\n",
         "        results, enhanced_query = search_with_context(prompt, query_emb, context, k=5)\n",
         "        response = generate_response(enhanced_query, results)\n",
         "\n",
         "    with st.chat_message(\"assistant\"):\n",
         "        st.write(response)\n",
-        "        cols = st.columns(min(5, len(results)))\n",
-        "        for i, p in enumerate(results[:5]):\n",
-        "            with cols[i]:\n",
-        "                if p.get(\"image\"):\n",
-        "                    st.image(p[\"image\"], use_container_width=True)\n",
-        "                st.caption(p[\"name\"] + \" \" + str(int(p[\"similarity\"])) + \"%\")\n",
-        "                st.progress(int(min(100, p[\"similarity\"])))\n",
+        "        if len(results) > 0:\n",
+        "            cols = st.columns(min(5, len(results)))\n",
+        "            for i, p in enumerate(results[:5]):\n",
+        "                with cols[i]:\n",
+        "                    if p.get(\"image\"):\n",
+        "                        st.image(p[\"image\"], use_container_width=True)\n",
+        "                    st.caption(p[\"name\"] + \" \" + str(int(p[\"similarity\"])) + \"%\")\n",
+        "                    st.progress(int(min(100, p[\"similarity\"])))\n",
+        "        else:\n",
+        "            st.warning(\"No matching products found for your search.\")\n",
         "\n",
-        "    st.session_state.messages.append({\"role\": \"assistant\", \"text\": response, \"products\": results})"
+        "    st.session_state.messages.append({\n",
+        "        \"role\": \"assistant\",\n",
+        "        \"text\": response,\n",
+        "        \"products\": results\n",
+        "    })\n",
+        "    st.rerun()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KKa9AwUtd7Xc",
-        "outputId": "81c8079a-11bc-4d53-e75a-998e3d5da9fd"
+        "outputId": "0370a374-b0bd-4be2-8dc7-1095c84a2201"
       },
-      "execution_count": 14,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing app.py\n"
+            "Overwriting app.py\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 21,
       "metadata": {
         "id": "kyJ4Ml3e3NG9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "008c53a4-4eaa-4ebd-cebb-816a64e5c7e3"
+        "outputId": "73408fac-2d1d-4369-9ed6-1ed923ea7dc1"
       },
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:pyngrok.process.ngrok:t=2026-01-08T22:14:11+0000 lvl=warn msg=\"Stopping forwarder\" name=http-8501-38317740-2279-452e-9f59-e2101d2ba87e acceptErr=\"failed to accept connection: Listener closed\"\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
             " Fashion Chatbot is live at:\n",
-            "   NgrokTunnel: \"https://f39a8b6eedd9.ngrok-free.app\" -> \"http://localhost:8501\"\n",
+            "   NgrokTunnel: \"https://a354d2b86a5f.ngrok-free.app\" -> \"http://localhost:8501\"\n",
             "\n",
             " Note: Give some time while models initialize\n"
           ]
